# rust-redis-geo-test-compare

./: FinderLoadSimulation.java
TestGeoSpatialRust/: Cargo.toml
TestGeoSpatialRust/src/: a.json  main.rs
TestGeoSpatialSpringRedisNormal/: pom.xml
TestGeoSpatialSpringRedisNormal/src/main/java/ir/desprime/TestRedisGeoNormal/: GeoService.java  Location.java  LocationController.java  RedisConfiguration.java  TestRedisGeoNormalApplication.java
TestGeoSpatialSpringRedisReactive/: pom.xml
TestGeoSpatialSpringRedisReactive/src/main/java/ir/desprime/TestGeoSpatialReactive/: GeoService.java  Location.java  LocationController.java  TestGeoSpatialReactiveApplication.java
buffered-france-regions-geojson/: Buffered-Auvergne-Rhone-Alpes.geojson  Buffered-Bourgogne-Franche-Comte.geojson  Buffered-Bretagne.geojson  Buffered-Centre-Val-de-Loire.geojson  Buffered-Corse.geojson  Buffered-Grand-Est.geojson  Buffered-Hauts-de-France.geojson  Buffered-Normandie.geojson  Buffered-Nouvelle-Aquitaine.geojson  Buffered-Occitanie.geojson  Buffered-Pays-de-la-Loire.geojson  Buffered-Provence-Alpes-Cote-dAzur.geojson  Buffered-ile-de-France.geojson
