[package]
name = "geospatial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
csv = "1.3.0"
geo = "0.27.0"
geo-types = { version = "0.7.12" }
geojson = "0.24.1"
kiddo = "4.0.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
